SpeedCrunch post 0.7
---------------------
binary is now relocatable (using BinReloc)

SpeedCrunch 0.7-beta2
---------------------
support for building using CMake
fixed issue #9: unary minus before a function
fixed issue #7: function argument in brackets
fixed issue #6: exponentiation of a negative number returns NaN
fixed issue #5: auto calculation shows up even on the first run
fixed issue #4: should scroll automatically to show the result
fixed issue #3: function argument starts with unary minus
patched crunch.pro to fix "make install" (thanks to Vladimir Pouzanov)
made the application look for translations in the current directory too
updated the russian, french and portuguese translations - thanks all translators

SpeedCrunch 0-7-beta1
---------------------
changed from Qt 3 to Qt 4
changed the configure script to be compatible with Qt 4
converted the layout system from container widgets to layouts
added the keypad
added an application icon for windows systems

SpeedCrunch 0.6-beta2
---------------------
fixed mouse wheel scrolls do not recally history
too large or too small number yields NaN, instead of silently becomes 0
added (partial) Czech translation by Blondak (blondak@neser.cz)
added Portuguese BR by Henrique Pinto (henrique.pinto@kdemail.net)
fixed Enter in numeric keypad does not evaluate
flicker-free about box, by Michael Pyne (pynm0001@comcast.net)
comma key is also mapped as gives decimal digit, by Thomas Luebking
copy displayed item by clicking on it, by Gary Cramblitt
MS visual C++ fixes, by Philippe Fremy

SpeedCrunch 0.6-beta1 (8 June 2005)
-----------------------------------
support for syntax highlight, with matched parenthesis indicator
Calc-As-You-Type: show result even before you finish typing
autocomplete now also works for variables
fixed invisible pop-up completion for very long expression
show function description in function name autocomplete
show variable value in variable name autocomplete