@@ -1,6 +1,7 @@
 SpeedCrunch post 0.7
 ---------------------
 binary is now relocatable (using BinReloc)
+new functions: MIN, MAX, SUM, PRODUCT
 
 SpeedCrunch 0.7-beta2
 ---------------------
